small fixes for mobile: spacing font size, etc

--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -138,5 +138,8 @@ a, .email-icon {
 }
 
 .social-icon a, .social-icon .email-icon {
-  font-size: 2.4rem;
+  font-size: 1.9rem;
+  @include media-query(DESKTOP) {
+    font-size: 2.4rem;
+  }
 }
